# sdk

./: README.md
FIFA-SDK/: .env.example  LICENSE  README.md  package-lock.json  tsconfig.json
FIFA-SDK/docs/: agent-integration.md  backtesting.md  caching.md  compliance.md  data-model.md  getting-started.md  market-mapping.md  providers.md  roadmap.md
FIFA-SDK/src/: config.ts  error.ts  index.ts  logger.ts  types.ts
FIFA-SDK/tests/: cache.test.ts  confidence-engine.test.ts  prediction-parser.test.ts  sdk.test.ts
Prediction-V2-main/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
Prediction-V2-main/benchmarks/: aggregation.bench.ts  cache-hit-rate.bench.ts  latency.bench.ts  throughput.bench.ts
Prediction-V2-main/docs/: architecture.md  backtesting.md  configuration.md  getting-started.md  migration-v2.md  plugins.md  providers.md  replay.md  security.md  strategies.md  telemetry.md  triggers.md  versioning.md
Prediction-V2-main/schemas/: config.schema.ts  event.schema.ts  provider.schema.ts
Prediction-V2-main/scoring/: confidence-scorer.ts  factor-weighter.ts
Prediction-V2-main/scripts/: benchmark.ts  build.ts  generate-schemas.ts  release.ts  replay-fixture.ts  sync-chains.ts
Prediction-V2-main/security/: index.ts  permissions.ts  rate-limit.ts  secrets.ts  webhook-signatures.ts
Prediction-V2-main/src/: cache.ts  config.ts  data-fetcher.ts  events.ts  index.ts  logger.ts  metrics.ts  predictor.ts  types.ts  validators.ts
Prediction-V2-main/storage/: file-store.ts  memory-store.ts  redis-store.ts
Prediction-V2-main/strategies/: index.ts
Prediction-V2-main/telemetry/: exporters.ts  observers.ts  spans.ts
Prediction-V2-main/tests/: integration.test.1.ts  integration.test.2.ts  predictor.test.ts
Prediction-V2-main/triggers/: index.ts  keyword-trigger.ts  threshold-trigger.ts
Prediction-V2-main/utils/: dates.ts  strings.ts
Prediction-V2-main/versioning/: compatibility.ts  index.ts
Prediction-V2-main/windowing/: index.ts
SPORT-SDK/: README.md
Solana/: README.md
Solana/python/: README.md  pyproject.toml  setup.py
Solana/python/x402_sdk/: __init__.py  client.py  middleware.py  types.py
bnb/: README.md
bnb/python/: pyproject.toml  setup.py
bnb/python/x402_bnb/: __init__.py  client.py  errors.py  middleware.py  types.py  wallet.py
market-prediction-sdk-main/: README.md  package.json
(+448 files in other folders)
