[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jelly-x402-bnb"
version = "1.0.0"
description = "Jelly x402 BNB Chain SDK — HTTP 402 autonomous payments on BSC"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jelly Chain", email = "dev@jellychain.fun" }]
requires-python = ">=3.9"
dependencies = ["requests>=2.28.0"]

[project.optional-dependencies]
web3   = ["web3>=6.0.0"]
async  = ["httpx>=0.24.0"]
flask  = ["flask>=2.0.0"]
fastapi = ["fastapi>=0.100.0"]
full   = ["web3>=6.0.0", "httpx>=0.24.0", "flask>=2.0.0"]

[project.urls]
Homepage      = "https://jellychain.fun"
Documentation = "https://jellychain.fun/docs"
Source        = "https://github.com/jelly-chain/sdk"
